<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColour"
    tools:context=".view.SettingsScreen">

    <TextView
        android:id="@+id/lblSettingsTitle"
        style="?screenView"
        android:text="?settingsTitle"
        android:background="?screenBackgroundColour"
        android:textColor="?screenTextColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:contentDescription="@string/home_button"
        android:id="@+id/btnHome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:background="@drawable/home_button_highlight"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btnTheme1"
        style="?settingsScreenButtonTheme"
        android:backgroundTint="?themeButtonColour"
        android:text="@string/theme1ButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <ImageView
        android:contentDescription="@string/theme_1"
        android:id="@+id/imgTheme1Selected"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:translationZ="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblSettingsTitle"
        app:layout_constraintVertical_bias="0.399"
        app:srcCompat="@drawable/green_tick_v2" />

    <Button
        android:id="@+id/btnTheme2"
        style="?settingsScreenButtonTheme"
        android:backgroundTint="?themeButtonColour"
        android:text="?theme2Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <ImageView
        android:contentDescription="@string/theme_2"
        android:id="@+id/imgTheme2Selected"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:translationZ="5sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblSettingsTitle"
        app:layout_constraintVertical_bias="0.596"
        app:srcCompat="@drawable/green_tick_v2" />

</androidx.constraintlayout.widget.ConstraintLayout>